nifi-cluster/deployment-nifi.yml
apiVersion: v1          
kind: Service           
metadata:               
  name: nifi-service    
spec:                   
  selector:             
    app: nifi           
  ports:                
  - protocol: TCP       
    targetPort: 8443    
    port: 8443          
    name: ui  
  - protocol: TCP       
    targetPort: 7001    
    port: 7001          
    name: httplistener           

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  labels:
    app: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
      - name: nifi
        image: apache/nifi:1.18.0   
        resources:
          requests:
            cpu: ".5"
            memory: "2Gi"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8443
