nifi-cluster/ingress-nifi.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8443"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "https://localhost:8443"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://nifi.staging.odala.kiel.de"

    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/affinity-mode: persistent
#    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
#    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
#    nginx.ingress.kubernetes.io/modsecurity-snippet: |
#      SecRuleEngine On
#      SecAuditEngine On
#      SecAuditLog /var/log/modsec_audit.log
#      SecDebugLogLevel 9
#      SecDebugLog /var/log/modsec_debug.log
#      Include /usr/nginx/customRules.conf
    
    # nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    # nginx.ingress.kubernetes.io/use-geoip: "false"
    # nginx.ingress.kubernetes.io/use-geoip2: "true"
  name: nifi-ingress
spec:
  rules:
  - host: nifi.staging.odala.kiel.de
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nifi-service
            port:
              number: 8443
  tls:
  - hosts:
    - nifi.staging.odala.kiel.de
    secretName: nifi-cert
